# SEELE

./: .gitignore  CMakeLists.txt  README.md  main.cc
assets/: CMakeLists.txt  material.cc  material.h  object.cc  object.h  texture.cc  texture.h
components/: CMakeLists.txt  camera.cc  camera.h  directional_light.cc  directional_light.h  hittable.h  light.h  sphere.cc  sphere.h  transform.cc  transform.h  tri_mesh.cc  tri_mesh.h
configurations/: window.json
core/: CMakeLists.txt
core/general/: CMakeLists.txt  image.cc  image.h  renderer.cc  renderer.h  shader.cc  shader.h
core/photon/: CMakeLists.txt  photon_renderer.cc  photon_renderer.h
core/rasterization/: CMakeLists.txt  rasterization.puml  rasterization_renderer.cc  rasterization_renderer.h
core/raytracing/: CMakeLists.txt  hit_record.h  ray.cc  ray.h  raytracing_renderer.cc  raytracing_renderer.h
demo/: africa.lua  african_head.lua  basic_element.lua  basic_line.lua  diablo.lua  glass.lua  hello_world.lua  metal.lua  model.lua  pbc.lua  plant.lua  rendering.json  rt_sphere.lua  sphere.lua  triangle.lua  window.json  wireframe.lua  z_buffer.lua
demo/api/: renderer.lua
demo/assets/Africa/: african_head.mtl
demo/assets/Diablo/: diablo.mtl
demo/assets/PCB/: PCB.mtl
demo/assets/Plant/: 01Alocasia_obj.mtl
include/LuaBridge/: RefCountedPtr.h
include/OBJLoader/: OBJ_Loader.hpp
include/stb/: stb_image_resize.h
include/tga/: CMakeLists.txt
light/: CMakeLists.txt  light.h  light_manager.cc  light_manager.h  point_light.cc  point_light.h
lua_api/: light_manager.lua
math/: CMakeLists.txt  matrix.cc  matrix.h  vector.cc  vector.h
model/: CMakeLists.txt  model.cc  model.h
rendering/: CMakeLists.txt  camera.cc  camera.h  i_element.h  image.cc  image.h  rasterization_renderer.cc  rasterization_renderer.h  renderer.cc  renderer.h
rendering/basic/: CMakeLists.txt  line.cc  line.h
script/: CMakeLists.txt  rendering_script.cc  rendering_script.h  script_manager.cc  script_manager.h  shader.cc  shader.h
utilities/: CMakeLists.txt  random.h
utils/: CMakeLists.txt  debug.cc  debug.h  json_parser.cc  json_parser.h  registration.h
window_manager/: CMakeLists.txt  linux.cc  linux.h  mac_os.cc  mac_os.h  window_manager.h  windows.cc  windows.h
